# spitfire

./: .gitignore  README.md
.github/workflows/: build.yml
docs/: avr-programming-notes.md  protocol.md  voltmace-pinouts.md
firmware/: CMakeLists.txt  CMakePresets.json
firmware/cmake/: avr-toolchain.cmake
firmware/include/: adc.hpp  keypad.hpp  uart.hpp
firmware/src/: adc.cpp  keypad.cpp  main.cpp  uart.cpp
hardware/SPItFIRE/: SPItFIRE.kicad_pro  SPItFIRE.kicad_sch  voltmace-delta-14b.kicad_sch  voltmace-delta-3b-single.kicad_sch  voltmace-delta-3b-twin.kicad_sch
rom/: Makefile
